projects/Media/docroot/assets/css/common/portraititem.css
/* ... */
#transactionalPopup [data-component="product"] > form {
  display: inline-block;
  width: 100%;
}

.portrait-item-productimage_wrapper {
  position:relative;
  text-align: center;
}

.portrait-item-productimage {
  max-width: 100%;
  max-height: 100%;
  position:absolute;
  bottom:0;
  left:0;
  right:0;
  margin: auto;
  pointer-events: none;
}

#transactionalPopup .portrait-item-productimage {
  cursor: pointer;
}

#transactionalPopup .discontinued .portrait-item-productimage {
  cursor: default;
}

.unavailable .portrait-item-productimage {
  opacity: .5;
  filter: alpha(opacity=50);
}

.portrait-item.unavailable {
  color:#333;
}

.portrait-item.unavailable .portrait-item-controls,
.portrait-item.unavailable .portrait-item-price,
.portrait-item.unavailable .portrait-item-configuration,
.portrait-item.unavailable .portrait-item-price-deal {
  display:none;
}

.portrait-item.unavailable .portrait-item-header,
.portrait-item.unavailable .portrait-item-header-name,
.portrait-item.unavailable .portrait-item-header-configuration {
  color:#999;
}

.portrait-item.unavailable .portrait-item-header:after{
  content:"Unavailable";
  display:block;
  font-weight:bold;
  font-size:16px;
  color:#333;
  opacity:.5;
  filter: alpha(opacity=50);
  font-family:Verdana,Geneva,sans-serif;
  text-align:center;
  margin:20px 0;
}


.carouselTransactionalItem-image_wrapper .portrait-item-productimage {
  /*max-height: 70px;*/
}

.transactional-popup .carouselTransactionalItem-image_wrapper .portrait-item-productimage {
  max-height: none;
}

.portrait-item-burst_wrapper {
  display:inline-block;
  position:relative;
  width: 100%;
  height: 150px;
  line-height: 0;
  padding-bottom: 4px;
  vertical-align: bottom;
  margin-top: 0px;
}

.portrait-item:hover .portrait-item-controls {
  height:80px;
}

.transactional .portrait-item:hover .portrait-item-controls {
  height:0;
}

.portrait-item .save-price {
  color: #c00;
  font-size: 12px;
  font-weight: bold;
}

.portrait-item .portrait-item-price s {
  color: #888;
  font-size: 10px;
  font-weight: normal;
  text-decoration: line-through;
}

.display-default-sales-unit-container{
	font-size: 10px;
	font-weight: normal;
}

.display-default-sales-unit-container .price-per-default-sales-unit {
	clear: both;
	font-size: 12px;
	font-weight: bold;
}

.display-default-sales-unit-container .display-default-sales-unit{
	float: left;
	padding-right: 4px;
}

.portrait-item .display-default-sales-unit-container s{
	float: left;
}

.portrait-item .display-default-sales-unit-container .save-price{
	font-size: 10px;
	font-weight: normal;
	padding-left: 4px;
}

.portrait-item-controls {
  background:url(/media_stat/images/layout/1x1_80p_trans.png);
  background:rgba(255,255,255,0.8);
  width:100%;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  overflow:hidden;
  position:absolute;
  bottom:0;
  height:0;
  text-align: center;
}

.portrait-item-controls:before {
  content:' ';
  height:100%;
  width:1px;
  display:inline-block;
  vertical-align:middle;
}

.portrait-item-controls-content {
  display:inline-block;
  vertical-align:middle;
}

#transactionalPopup .portrait-item-controls-content {
  display: block;
}

#transactionalPopup .portrait-item-controls-content select {
  margin: 10px 0;
}

/* .portrait-item .burst {
  position:absolute;
  top:0;
  left:0;
} */
/* APPDEV-3962 */
.portrait-item .burst {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
}

.portrait-item .was-price {
  font-weight: normal;
  text-decoration: line-through;
}

.portrait-item .rating {
  display:block;
  margin: 0 auto 3px;
  line-height: 15px;
}

.portrait-item .portrait-item-header .norating,
.portrait-item .portrait-item-header .expertrating,
.portrait-item .portrait-item-header .customerrating,
.portrait-item .portrait-item-header .winerating,
.portrait-item .portrait-item-header .sustrating {
  display: inline-block;
  vertical-align: middle;
}

.portrait-item .norating {
  text-indent: -200%;
  overflow: hidden;
}

.portrait-item-availability-message {
  display: block;
  position: relative;
  background: #ffe7cf;
  border: 1px solid #f2c69b;
  margin: 15px 0 4px;
  padding: 4px 4px 4px 4px;
  text-align: left;
  font-size: 9px;
  line-height: 12px;
}

/*
.portrait-item-availability-message:before {
  content: '!';
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  width: 24px;
  height: 24px;
  line-height: 24px;
  text-align: center;
  font-size: 20px;
  border-radius: 50px;
  background: #f93;
  color: #fff;
}*/

.portrait-item-availability-message > div {
  margin-bottom: 4px;
}

.portrait-item-availability-message div:not(.am-cancellation) {
  font-weight: bold;
}

.portrait-item-availability-message > div:last-child {
  margin-bottom: 0;
}

.portrait-item-coupon {
  text-align: left;
  margin: 6px 0 0;
  float: left;
}

.portrait-item-coupon span[data-component="ecoupon-status"] {
  display: block;
  line-height: 15px;
}

.portrait-item-coupon .fdCoupon_data{
	display: none;
}

#transactionalPopup .portrait-item-coupon .fdCoupon_data {
  display: inline-block;
  padding-left: 18px;
}

.portrait-item-coupon .fdCoupon_stat {
  display: block;
}

a.portrait-item-header-name,
a.portrait-item-header-name:hover,
a.portrait-item-header-name:visited,
a.portrait-item-header-name:active,
a.portrait-item-header-name:link {
  color: #333;
}

.portrait-item-header-name b {
  display: block;
}

.portrait-item .nutritionSortInfo {
  float:left;
  clear: both;
  line-height: 1.2em;
  padding: 2px 0;
  margin: 6px 0;
  background: #f0f5e1;
  width: 100%;
}

.portrait-product-list-time{
  background: #F0F5E1;
  line-height: 20px;
  height: 20px;
  padding: 4px
}

.portrait-product-list-time span{
  padding-left: 4px;
  font-size: 14px;
}

.portrait-product-list-time.icon-clock2-before{
  vertical-align: top;
}
/* ... */

